tests/NormalTests/paczka1/small_fuzzy/39404032.err
Error in line 5: A998 S623 22,2
Error in line 10: A998 A136 73,5
